add test kt code